--- a/css/styles.css
+++ b/css/styles.css
@@ -3337,6 +3337,7 @@ td:last-child {
     letter-spacing: -0.025em;
     margin-top    : 0;
     margin-bottom : var(--vspace-1_25);
+    color: black;
 }
 
 .s-intro__content-btns {
